mount /var/run/secrets/kubernetes.io/serviceaccount to job container

--- a/.github/workflows/dime-service-cd.yml
+++ b/.github/workflows/dime-service-cd.yml
@@ -64,6 +64,8 @@ jobs:
       credentials:
         username: ${{ needs.credentials.outputs.ecr_username }}
         password: ${{ needs.credentials.outputs.ecr_password }}
+      volumes:
+        - /var/run/secrets/kubernetes.io/serviceaccount:/var/run/secrets/kubernetes.io/serviceaccount
     steps:
       - name: Checkout Dime helm repository
         run: |
