--- a/.github/workflows/dime-service-cd.yml
+++ b/.github/workflows/dime-service-cd.yml
@@ -88,7 +88,8 @@ jobs:
         
           kubectl config set-credentials eks-account --token=$TOKEN
           kubectl config set-cluster eks --server=$APISERVER --certificate-authority=$CACERT
-          kubectl config set-context --current --cluster=eks --user=eks-account --namespace=$NAMESPACE
+          kubectl config set-context default --cluster=eks --user=eks-account --namespace=$NAMESPACE
+          kubectl config use-context default
 
           helm template ${{ inputs.release_name }} dime-helm/charts/dime-application \
           -f dime-helm/values/${{ inputs.application_name }}/values.yaml \
@@ -98,4 +99,4 @@ jobs:
           --set "destination.cluster=${{ inputs.environment }}" \
           --set "application.values.virtualService.hosts={${{ inputs.application_endpoints }}}" \
           --set "application.values.image.repository=${{ inputs.image_repository }}" \
-          --set "application.values.image.tag=${{ inputs.image_tag }}" | kubectl apply -f --
+          --set "application.values.image.tag=${{ inputs.image_tag }}" | kubectl apply -f -
