--- a/.github/workflows/dime-service-cd.yml
+++ b/.github/workflows/dime-service-cd.yml
@@ -85,13 +85,13 @@ jobs:
           export NAMESPACE=$(cat ${SERVICEACCOUNT}/namespace)
           export TOKEN=$(cat ${SERVICEACCOUNT}/token)
           export CACERT=${SERVICEACCOUNT}/ca.crt
-        
+
           kubectl config set-credentials eks-account --token=$TOKEN
           kubectl config set-cluster eks --server=$APISERVER --certificate-authority=$CACERT
           kubectl config set-context default --cluster=eks --user=eks-account --namespace=$NAMESPACE
           kubectl config use-context default
 
-          helm template ${{ inputs.release_name }} dime-helm/charts/dime-application \
+          helm upgrade -i ${{ inputs.release_name }} dime-helm/charts/dime-application \
           -f dime-helm/values/${{ inputs.application_name }}/values.yaml \
           -f dime-helm/values/${{ inputs.application_name }}/values-${{ inputs.environment }}.yaml \
           --set "source.username=${{ secrets.gh_access_token }}" \
@@ -99,4 +99,4 @@ jobs:
           --set "destination.cluster=${{ inputs.environment }}" \
           --set "application.values.virtualService.hosts={${{ inputs.application_endpoints }}}" \
           --set "application.values.image.repository=${{ inputs.image_repository }}" \
-          --set "application.values.image.tag=${{ inputs.image_tag }}" | kubectl apply -f -
+          --set "application.values.image.tag=${{ inputs.image_tag }}"
