--- a/.github/workflows/dime-golang-ci.yml
+++ b/.github/workflows/dime-golang-ci.yml
@@ -112,7 +112,7 @@ jobs:
 
   build:
     name: Build & push docker images to registry
-    needs: [unit-test]
+    needs: [unit-test, integration-test]
     runs-on: [self-hosted, linux]
     if: ${{ always() }}
     outputs:
