change permission of .netrc file

--- a/.github/workflows/dime-node-ci.yml
+++ b/.github/workflows/dime-node-ci.yml
@@ -40,6 +40,8 @@ jobs:
 
       - name: Set up go version and caches
         uses: kkp-dfs/dime-github-actions-workflows/node-setup@main
+        with:
+          repository: ${{ inputs.repository }}
 
       - name: Install node modules
         run: npm install
