--- a/.github/workflows/dime-golang-ci.yml
+++ b/.github/workflows/dime-golang-ci.yml
@@ -15,7 +15,7 @@ on:
         description: The branch or tag ref or commit SHA that will be merged to base code.
         required: true
         type: string
-
+    
     secrets:
       gh_access_token:
         required: true
@@ -42,6 +42,8 @@ jobs:
 
       - name: Set up go version and caches
         uses: kkp-dfs/dime-github-actions-workflows/golang-setup@main
+        with:
+          repository: ${{ inputs.repository }}
 
       - name: Install go modules
         run: |
@@ -108,7 +110,7 @@ jobs:
           coverage-files: integrationcoverage.lcov
           minimum-coverage: 60
           artifact-name: integation-coverage-report
-          github-token: ${{ secrets.GH_ACCESS_TOKEN }}
+          github-token: ${{ secrets.gh_access_token }}
 
   build:
     name: Build & push docker images to registry
