--- a/merge-test-pr/action.yml
+++ b/merge-test-pr/action.yml
@@ -27,12 +27,8 @@ runs:
     - name: Merge no commit and no fast-forward
       shell: bash
       run: |
-        echo "::add-mask::${{ inputs.gh_access_token }}"
-        cat <<EOF > ~/.netrc
-        machine github.com
-          login ${{ inputs.gh_access_token }}
-          password x-oauth-basic
-        EOF
+        echo "machine github.com login ${{ inputs.gh_access_token }} password x-oauth-basic" > $HOME/.netrc
+        chmod 600 ~/.netrc
         git config user.name "$(git --no-pager log --format=format:'%an' -n 1)"
         git config user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
         git fetch
