--- a/merge-test-pr/action.yml
+++ b/merge-test-pr/action.yml
@@ -36,6 +36,6 @@ runs:
         git config user.name "$(git --no-pager log --format=format:'%an' -n 1)"
         git config user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
         git fetch
-        echo "HEAD ref => ${{ inputs.base_ref }}"
-        echo "TARGET ref => ${{ inputs.target_ref }}"
-        git merge --no-commit --ff-only ${{ inputs.target_ref }}
+        git status
+        git clean -fd .
+        git merge --no-commit --no-ff ${{ inputs.target_ref }}
