--- a/merge-test-pr/action.yml
+++ b/merge-test-pr/action.yml
@@ -36,4 +36,5 @@ runs:
         git config user.name "$(git --no-pager log --format=format:'%an' -n 1)"
         git config user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
         git fetch
+        git diff ${{ inputs.target_ref }} -- .
         git merge --no-commit --no-ff ${{ inputs.target_ref }}
