--- a/merge-test-pr/action.yml
+++ b/merge-test-pr/action.yml
@@ -36,5 +36,7 @@ runs:
         if [ "${{ inputs.base_ref }}" != "${{ inputs.target_ref }}" ]; then
           git config user.name "$(git --no-pager log --format=format:'%an' -n 1)"
           git config user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
+          git fetch
+          git clean -fd
           git merge --no-commit --no-ff origin/${{ inputs.target_ref }}
         fi
