--- a/.github/workflows/dime-golang-ci.yml
+++ b/.github/workflows/dime-golang-ci.yml
@@ -119,7 +119,7 @@ jobs:
   build:
     name: Build & push docker images to registry
     needs: [unit-test, integration-test]
-    runs-on: [self-hosted, linux]
+    runs-on: [self-hosted, linux, build]
     if: ${{ always() }}
     outputs:
       docker_image: ${{ steps.build.outputs.docker_image }}
