--- a/.github/workflows/dime-node-ci.yml
+++ b/.github/workflows/dime-node-ci.yml
@@ -70,7 +70,7 @@ jobs:
   build:
     name: Build & push docker images to registry
     needs: [lint]
-    runs-on: [self-hosted, linux]
+    runs-on: [self-hosted, linux, build]
     outputs:
       docker_image: ${{ steps.build.outputs.docker_image }}
     steps:
