--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -50,9 +50,15 @@ on:
         description: Name of application
         required: true
         type: string
+      slack_channel:
+        description: The slack channel that send notification.
+        type: string
+        required: true
 
     secrets:
       gh_access_token:
+        required: true
+      slack_webhook:
         required: true
 
 jobs:
@@ -125,6 +131,7 @@ jobs:
         if: ${{ inputs.code_lang == 'golang' }}
         uses: kkp-dfs/dime-github-actions-workflows/golang-testing@main
         with:
+          application_name: ${{ inputs.application_name }}
           repository: ${{ inputs.repository }}
           base_ref: ${{ inputs.base_ref }}
           target_ref: ${{ inputs.target_ref }}
@@ -134,6 +141,8 @@ jobs:
           coverage_files: unitcoverage.lcov
           artifact_name: unittest-coverage-report
           minimum_coverage: 80
+          slack_webhook: ${{ secrets.slack_webhook }}
+          slack_channel: ${{ inputs.slack_channel }}
 
   integration-test:
     name: Run integration test
@@ -146,6 +155,7 @@ jobs:
         if: ${{ inputs.code_lang == 'golang' }}
         uses: kkp-dfs/dime-github-actions-workflows/golang-testing@main
         with:
+          application_name: ${{ inputs.application_name }}
           repository: ${{ inputs.repository }}
           base_ref: ${{ inputs.base_ref }}
           target_ref: ${{ inputs.target_ref }}
@@ -155,6 +165,8 @@ jobs:
           coverage_files: integrationcoverage.lcov
           artifact_name: integation-coverage-report
           minimum_coverage: 60
+          slack_webhook: ${{ secrets.slack_webhook }}
+          slack_channel: ${{ inputs.slack_channel }}
 
   build:
     name: Build & push docker images to registry
@@ -268,3 +280,27 @@ jobs:
           --set "application.values.virtualService.hosts={${{ needs.build.outputs.endpoint }}}" \
           --set "application.values.image.repository=${{ needs.build.outputs.image_repo }}" \
           --set "application.values.image.tag=${{ needs.build.outputs.image_tag }}"
+
+      - name: Slack Notification
+        if: ${{ success() }}
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_CHANNEL: ${{ inputs.slack_channel }}
+          SLACK_COLOR: good
+          SLACK_ICON: https://avatars.githubusercontent.com/u/90231066?s=200&v=4
+          SLACK_MESSAGE: You can access to this deployment at https://${{ needs.build.outputs.endpoint }}
+          SLACK_TITLE: Successfully deploy ${{ inputs.application_name }} on ${{ inputs.environment }} environment
+          SLACK_USERNAME: GitHub Actions
+          SLACK_WEBHOOK: ${{ secrets.slack_webhook }}
+
+      - name: Slack Notification
+        if: ${{ failure() }}
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_CHANNEL: ${{ inputs.slack_channel }}
+          SLACK_COLOR: danger
+          SLACK_ICON: https://avatars.githubusercontent.com/u/90231066?s=200&v=4
+          SLACK_MESSAGE: Cannot deploy ${{ inputs.application_name }} from $GITHUB_REF to ${{ inputs.environment }} environment
+          SLACK_TITLE: Fail to deploy ${{ inputs.application_name }} on ${{ inputs.environment }} environment
+          SLACK_USERNAME: GitHub Actions
+          SLACK_WEBHOOK: ${{ secrets.slack_webhook }}
