--- a/golang-testing/action.yml
+++ b/golang-testing/action.yml
@@ -2,6 +2,9 @@ name: Golang Testiong
 description: Run test cases and keep testing report
 
 inputs:
+  application_name:
+    description: Name of application
+    required: true
   repository:
     description: The owner and repository name
     required: true
@@ -27,6 +30,15 @@ inputs:
     description: "The minimum coverage to pass the check. Optional. Default: `0` (always passes)"
     required: false
     default: "0"
+  slack_channel:
+    description: The slack channel that send notification.
+    required: true
+  slack_webhook:
+    description: The slack webhook url
+    required: true
+  gh_access_token:
+    description: GitHub access token
+    required: true
 
 runs:
   using: composite
@@ -37,7 +49,7 @@ runs:
         repository: ${{ inputs.repository }}
         base_ref: ${{ inputs.base_ref }}
         target_ref: ${{ inputs.target_ref }}
-        gh_access_token: ${{ secrets.gh_access_token }}
+        gh_access_token: ${{ inputs.gh_access_token }}
 
     - name: Set up go version and caches
       uses: kkp-dfs/dime-github-actions-workflows/golang-setup@main
@@ -56,4 +68,28 @@ runs:
         coverage-files: ${{ inputs.coverage_files }}
         minimum-coverage: ${{ inputs.minimum_coverage }}
         artifact-name: ${{ inputs.artifact_name }}
-        github-token: ${{ secrets.gh_access_token }}
+        github-token: ${{ inputs.gh_access_token }}
+
+    - name: Slack Notification
+      if: ${{ success() }}
+      uses: rtCamp/action-slack-notify@v2
+      env:
+        SLACK_CHANNEL: ${{ inputs.slack_channel }}
+        SLACK_COLOR: good
+        SLACK_ICON: https://avatars.githubusercontent.com/u/90231066?s=200&v=4
+        SLACK_MESSAGE: This repo passed all test cases of ${{ inputs.test_name }} and there is coverage over than ${{ inputs.minimum_coverage }}%
+        SLACK_TITLE: Go ${{ inputs.test_name }} is PASS
+        SLACK_USERNAME: GitHub Actions
+        SLACK_WEBHOOK: ${{ inputs.slack_webhook }}
+
+    - name: Slack Notification
+      if: ${{ failure() }}
+      uses: rtCamp/action-slack-notify@v2
+      env:
+        SLACK_CHANNEL: ${{ inputs.slack_channel }}
+        SLACK_COLOR: danger
+        SLACK_ICON: https://avatars.githubusercontent.com/u/90231066?s=200&v=4
+        SLACK_MESSAGE: This repo fail on some test cases of ${{ inputs.test_name }} or there is coverage less than ${{ inputs.minimum_coverage }}%
+        SLACK_TITLE: ${{ inputs.application_name }} ${{ inputs.test_name }} is FAIL
+        SLACK_USERNAME: GitHub Actions
+        SLACK_WEBHOOK: ${{ inputs.slack_webhook }}
