--- a/golang-testing/action.yml
+++ b/golang-testing/action.yml
@@ -59,8 +59,8 @@ runs:
     - name: Run test-cases
       shell: bash
       run: |
-        export PATH=$(go env GOPATH)/bin:$PATH
-        find / -name *ginkgo* -print
+        export PATH=$HOME/go/bin:$(go env GOPATH)/bin:/go/bin:$PATH
+        touch $HOME/.ack-ginkgo-rc
         make ${{ inputs.test_name }}
         make ${{ inputs.coverage_generator }}
 
